# JNITestDemo

./: README.md  build.gradle  jnidemo.jks
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/myself/jnitestdemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: helper.h  native-lib.cpp
app/src/main/cpp/encryption/: AES.cpp  AES.h  DES.cpp  DES.h  RSA.cpp  RSA.h  SHA1.cpp  SHA1.h
app/src/main/java/com/myself/jnitestdemo/: JniTest.java  JniUtils.java  MainActivity.java  SNaviEngineManager.java
app/src/main/java/com/myself/jnitestdemo/base/: ActivityManager.java  AppInfoActivity.java  BaseActivity.java  FirInfoBean.java  TotalApplication.java  UpgradeHelper.java
app/src/main/java/com/myself/jnitestdemo/base/handler/: WeakHandler.java
app/src/main/java/com/myself/jnitestdemo/test/: FileProviderTestActivity.java
app/src/main/java/com/myself/jnitestdemo/untitled/: MyActivity.java  SDCardListenerService.java
app/src/main/java/com/myself/jnitestdemo/utils/: AppUtils.java  CrashHandler.java  DateUtils.java  FileUtils.java  NetworkUtils.java  ResourcesUtils.java  SDCardUtils.java  StringUtils.java  ToastUtils.java
app/src/main/jni/: Android.mk  Application.mk  JniUtilsTest.c  JniUtilsTest.cpp  com_myself_jnitestdemo_JniUtils.h  hello-jni.c  helper.h
app/src/main/res/layout/: activity_app_info.xml  activity_base.xml  activity_file_provider_test.xml  activity_main.xml  content_base.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: filepaths.xml
app/src/test/java/com/myself/jnitestdemo/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
